<resources>
    <string name="app_name">DU Marketing Admin</string>
    <string name="tf_hint_name">Name</string>
    <string name="tf_hint_email">Email</string>
    <string name="tf_hint_phone">Phone</string>
    <string name="tf_hint_title">Title…</string>
    <string name="tf_hint_ebook_name">Ebook Name…</string>
    <string name="tf_hint_subject_name">Subject Name</string>
    <string name="tf_hint_faculty_name">Faculty Name</string>
    <string name="tf_hint_location">Class Location</string>
    <string name="tf_hint_user_email">Email Address</string>
    <string name="tf_hint_user_password">Password</string>
    <string name="rationale_ask_allow">Allow</string>
    <string name="rationale_ask_dont">Don\'t Allow</string>
    <string name="information">Information</string>
    <string name="routine">Routine</string>
    <string name="faculty">Faculty</string>
    <string name="ebook">Ebook</string>
    <string name="gallery">Gallery</string>
    <string name="notice">Notice</string>
    <string name="delete_notice_button">Delete Notice Button</string>
    <string name="upload_ebook">Upload Ebook</string>
    <string name="select_book">tap to select a pdf</string>
    <string name="no_ebook_selected_yet">No Ebook selected yet</string>
    <string name="book_cover">Book cover</string>
    <string name="suggestion">Suggestion</string>
    <string name="go_back">Go back</string>
    <string name="back">Back</string>
    <string name="ebooks">Ebooks</string>
    <string name="upload">Upload</string>
    <string name="upload_image">Upload image</string>
    <string name="add_image">Add Image</string>
    <string name="select_image_category">Select image category.</string>
    <string name="add_faculty">Add Faculty</string>
    <string name="save_faculty">Save Faculty</string>
    <string name="delete">Delete</string>
    <string name="select_post">Select post for teacher</string>
    <string name="_1st_year">1st Year</string>
    <string name="_2nd_year">2nd Year</string>
    <string name="_4th_year">4th Year</string>
    <string name="_3rd_year">3rd Year</string>
    <string name="teacher">Teacher</string>
    <string name="location">Location</string>
    <string name="notice_image">Notice Image</string>
    <string name="save_routine">Save Routine</string>
    <string name="add_routine">Add Routine</string>
    <string name="admin_register">Admin Register</string>
    <string name="log_in">Log In</string>
    <string name="logo">Log</string>
    <string name="admin_login">Admin Login</string>
    <string name="register">Register</string>
    <string name="official_email_address">Official Email Address</string>
    <string name="official_telephone_number">Official Telephone Number</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="save">Save</string>
    <string name="introduction_about_the_department">Introduction about the department.</string>
    <string name="add_image_button">Add Image Button</string>
    <string name="log_out">Log Out</string>
    <string name="add_notice">Add Notice</string>
    <string name="image_preview">Image Preview</string>
    <string name="teacher_photo">Teacher photo</string>
    <string name="teacher_position">Teacher position</string>
    <string name="teacher_phone">Teacher phone</string>
    <string name="teacher_mail">Teacher mail</string>
    <string name="gallery_image">Gallery Image</string>
</resources>