<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- app bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back_button"
                android:layout_width="@dimen/default_image_button_size"
                android:layout_height="@dimen/default_image_button_size"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/go_back"
                android:src="@drawable/ic_fluent_ios_arrow_left_24_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?android:colorPrimary" />

            <TextView
                android:id="@+id/tv_app_bar_title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/add_faculty"
                android:textAlignment="center"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- main body -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_app_bar"
            app:layout_constraintVertical_bias="0">


            <androidx.cardview.widget.CardView
                android:id="@+id/cvAvatar"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_margin="16sp"
                android:background="@color/transparent"
                android:elevation="0dp"
                android:padding="4dp"
                app:cardCornerRadius="100dp"
                app:cardElevation="0sp"
                app:layout_constraintBottom_toTopOf="@id/tiTeacherName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivAvatar"
                    style="@style/avatarImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/add_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_fluent_person_add_24_filled" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiTeacherName"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12sp"
                android:hint="@string/tf_hint_name"
                app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                app:boxCornerRadiusBottomStart="@dimen/default_radius"
                app:boxCornerRadiusTopEnd="@dimen/default_radius"
                app:boxCornerRadiusTopStart="@dimen/default_radius"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cvAvatar">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiTeacherPhone"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12sp"
                android:hint="@string/tf_hint_phone"
                app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                app:boxCornerRadiusBottomStart="@dimen/default_radius"
                app:boxCornerRadiusTopEnd="@dimen/default_radius"
                app:boxCornerRadiusTopStart="@dimen/default_radius"
                app:layout_constraintBottom_toTopOf="@+id/tiTeacherEmail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tiTeacherName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiTeacherEmail"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:hint="@string/tf_hint_email"
                app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                app:boxCornerRadiusBottomStart="@dimen/default_radius"
                app:boxCornerRadiusTopEnd="@dimen/default_radius"
                app:boxCornerRadiusTopStart="@dimen/default_radius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/rlSpinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiTeacherPhone">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:id="@+id/rlSpinner"
                android:layout_width="300sp"
                android:layout_height="50sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12sp"
                android:background="@drawable/spinner_border"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/btn_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tiTeacherEmail">

                <Spinner
                    android:id="@+id/sFacultyPostCat"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/select_post"
                    android:src="@drawable/ic_fluent_caret_down_24_selector" />

            </RelativeLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="300sp"
                android:layout_height="56dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_rounded_rectangle_button_solid"
                android:text="@string/save_faculty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rlSpinner" />

            <Button
                android:id="@+id/bt_delete_faculty"
                android:layout_width="300sp"
                android:layout_height="@dimen/default_min_clickable_height"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_rounded_rectangle_button_bordered"
                android:text="@string/delete"
                android:textColor="?android:colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_save" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>