<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back_button"
                android:layout_width="@dimen/default_image_button_size"
                android:layout_height="@dimen/default_image_button_size"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/go_back"
                android:src="@drawable/ic_fluent_ios_arrow_left_24_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?android:colorPrimary" />

            <TextView
                android:id="@+id/tv_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="?android:colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/iv_back_button"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_app_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_ebook"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_main_body"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/default_horizontal_margin"
            app:layout_constraintTop_toBottomOf="@+id/cl_app_bar">

            <ImageView
                android:id="@+id/ivIconEbookImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:contentDescription="@string/select_book"
                android:padding="16dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_fluent_book_add_24_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvPdfName"
                style="@style/TextAppearance.AppCompat.Caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12sp"
                android:text="@string/no_ebook_selected_yet"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tiEbookName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivIconEbookImage" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tiEbookName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/tf_hint_ebook_name"
                android:textAlignment="center"
                android:textDirection="ltr"
                app:boxCornerRadiusBottomEnd="@dimen/default_radius"
                app:boxCornerRadiusBottomStart="@dimen/default_radius"
                app:boxCornerRadiusTopEnd="@dimen/default_radius"
                app:boxCornerRadiusTopStart="@dimen/default_radius"
                app:hintEnabled="true"
                app:layout_constraintEnd_toStartOf="@id/btn_upload_book"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvPdfName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="name"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_upload_book"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:background="@drawable/bg_rounded_rectangle_button_solid"
                android:contentDescription="@string/upload_ebook"
                android:src="@drawable/ic_fluent_arrow_upload_24_regular"
                app:layout_constraintBottom_toBottomOf="@id/tiEbookName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tiEbookName"
                app:layout_constraintTop_toTopOf="@id/tiEbookName"
                app:tint="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recommended_books"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/tiEbookName"
                tools:listitem="@layout/list_item_recommended_book" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>