<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- app bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_app_bar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_back_button"
                android:layout_width="@dimen/default_image_button_size"
                android:layout_height="@dimen/default_image_button_size"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/go_back"
                android:src="@drawable/ic_fluent_ios_arrow_left_24_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?android:colorPrimary" />


            <TextView
                android:id="@+id/tv_app_bar_title"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/faculty"
                android:textAlignment="center"
                android:textSize="21sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fab_add_faculty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:text="@string/add_faculty"
                android:textColor="?android:colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <!-- main body -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_app_bar">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFacultyMemberLists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="5"
                tools:listitem="@layout/list_item_faculty" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>